--- a/css/style.css
+++ b/css/style.css
@@ -21,3 +21,67 @@ body {
     padding: 0 30px;
     margin: 0 auto;
 }
+/* header */
+header {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 25px 0;
+}
+.header-inner {
+    display: flex;
+    justify-content: space-between;
+}
+.header-inner a {
+    color: white;
+    text-decoration: none;
+}
+.header-inner .logo {
+    font-size: 26px;
+}
+header .menu {
+    list-style: none;
+}
+header .menu li {
+    display: inline-block;
+    padding: 0 20px;
+    height: 32px;
+    line-height: 32px;
+}
+header .menu li a {
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+/* cover */
+.cover {
+    width: 100%;
+    height: 735px;
+    background-image: url("../img/cover.jpeg");
+    background-position: center;
+}
+.cover-cont {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.cover-text {
+    max-width: 400px;
+    color: white;
+}
+.cover-text h1 {
+    font-size: 90px;
+}
+.cover-text p {
+    font-size: 20px;
+    line-height: 32px;
+    margin: 25px 0 30px;
+}
+.cover-text .btn {
+    display: inline-block;
+    padding: 16px 28px;
+    font-size: 16px;
+    background-image: linear-gradient(135deg, rgb(71, 138, 201), rgb(36, 217, 234));
+    border-radius: 8px;
+}
