--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,56 @@ header .menu li a {
     background-image: linear-gradient(135deg, rgb(71, 138, 201), rgb(36, 217, 234));
     border-radius: 8px;
 }
+
+
+
+/* places */
+
+.places {
+    padding: 60px 0;
+}
+
+.places > h1, .places > p {
+    text-align: center;
+    letter-spacing: 1px;
+}
+
+.places > h1 {
+    color: #478ac9;
+}
+
+.places > p {
+    margin: 30px 0 90px;
+    color: #4c7397;
+    font-size: 18px;
+}
+
+.places-list {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 30px;
+}
+
+.place-card img {
+    vertical-align: middle;
+}
+
+.place-card > img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+.place-bottom {
+    background-color: #fff;
+    padding: 20px 10px;
+}
+
+.place-bottom img {
+    width: 30px;
+    filter: invert(74%) sepia(7%) saturate(12%) hue-rotate(343deg) brightness(104%) contrast(92%);
+}
+
+.place-bottom i {
+    color: #111111;
+}
